--- a/public/index.html
+++ b/public/index.html
@@ -5,83 +5,111 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Software Engineer & Social Media Marketer | Jesus Vega</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="https://avatars0.githubusercontent.com/u/9167698?s=400&u=7c6f63f54c8f4887e81afbe6736edf17e91cceaf&v=4" alt="" /></a>
-					<h1><strong>I am Jesus Vega</strong>, a Software Engineer and Social Media Marketer who is focused on continuously delivering value.</h1>
-				</div>
+<head>
+	<title>Software Engineer & Social Media Marketer | Jesus Vega</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="#" class="image avatar"><img src="https://avatars0.githubusercontent.com/u/9167698?s=400&u=7c6f63f54c8f4887e81afbe6736edf17e91cceaf&v=4" alt="" /></a>
+			<h1><strong>I am Jesus Vega</strong>, a Software Engineer and Social Media Marketer who is focused on continuously delivering value.</h1>
+		</div>
+	</header>
+
+	<!-- Main -->
+	<div id="main">
+
+		<!-- One -->
+		<section id="one">
+			<header class="major">
+				<h2>About Me</h2>
 			</header>
+			<p>I'm a <a href="https://github.com/ParagonChuy?tab=overview&from=2017-12-01&to=2017-12-31">Software Engineer</a>
+				with experience in <a href="https://vegadma.com">Social Media Marketing.</a>
+				I've been honing my skills as a Full Stack Engineer since I was in high school, now in my early twenties. My language of choice is
+				Javascript. However, I've had experiece with languages ranging from Java to Swift. Along with working with working with projects that
+				involved different languages, I was exposed to popular Front End Frameworks and Libraries such as BootStrap 3/4, jQuery, Material, React, UIKit.
+			</p>
 
-		<!-- Main -->
-			<div id="main">
+			<ul class="actions">
+				<li><a href="#three"><input type="submit" value="Contact Me" /></a></li>
+			</ul>
+		</section>
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>About Me</h2>
-						</header>
-						<p>It me</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+		<!-- Two -->
+		<section id="two">
+			<h2>Recent Work</h2>
+			<div>
+				<article class="col-6 col-12-xsmall work-item">
+					<h3>Industrial Logic (April 2018 - Current)</h3>
+					<p>Worked as a Software Engineer that had a heavy focus on
+						<ul>
+							<li>Behavior Driven Development with Cucumber</li>
+							<li>Continous Deployement with Pivotal, and Heroku</li>
+							<li>Evolutionary Design</li>
+							<li>Refactoring Legacy Code to Patterns</li>
+							<li>Test Driven Development with JUnit, Mocha, Jest</li>
 						</ul>
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+				<h3></h3>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<h3>FlatIron School (November 2017 - January 2018)</h3>
+					<p>Online Coding Bootcamp that taught<br>
+						<ul>
+							<li>Programmming Fundamentals
+								<ul>
+									<li>HTML & CSS, OOP, Ruby, SQL, ORM</li>
+								</ul>
+							</li>
+							<li>Web Frameworks
+								<ul>
+									<li>Sinatra & Rails</li>
+								</ul>
+							</li>
+							<li>Javascript
+								<ul>
+									<li>ES6, React, Vanilla</li>
+								</ul>
+							</li>
+							<li>Front End Frameworks
+								<ul>
+									<li>React, Redux, JSON</li>
+								</ul>
+							</li>
 						</ul>
-					</section>
+					</p>
+				</article>
+				<article class="col-6 col-12-xsmall work-item">
+					<h3>FreeCodeCamp (Febrary 2016 - January 2018)</h3>
+					<p>Open Source Online Bootcamp that taught basic web development skills such as 			</p>
+						<ul>
+							<li>Version Control with Git</li>
+							<li>Javascript Fundamentals</li>
+							<li>HTML & CSS</li>
+							<li>Data Structures</li>
+							<li>Algorithms</li>
+							<li>jQuery & Bootstrap</li>
+						</ul>
+				</article>
+			</div>
+		</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>I look forward to working with you. </p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<!-- <form method="post" action="contact@jesusvega.me">
+		<!-- Three -->
+		<section id="three">
+			<h2>Get In Touch</h2>
+			<p>I look forward to working with you. </p>
+			<div class="row">
+				<div class="col-8 col-12-small">
+					<!-- <form method="post" action="contact@jesusvega.me">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="text" name="_subject" id="subject email" placeholder="Subject" /></div>
@@ -92,33 +120,52 @@
 										<li><input type="submit" value="Send Message" /></li>
 									</ul>
 								</form> -->
-								<form>
-								<div class="typeform-widget" data-url="https://jesusvega727883.typeform.com/to/fkGEGZ" data-transparency="100" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 300px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=fkGEGZ&utm_source=typeform.com-13801649-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
-							</form>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										8313 La Riviera Dr.<br />
-										Sacramento, CA 95826<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										805-844-7081
-									</li>
-									<li>
-										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">contact@jesusvega.me</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
+					<form>
+						<div class="typeform-widget" data-url="https://jesusvega727883.typeform.com/to/fkGEGZ" data-transparency="100" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 300px;"></div>
+						<script>
+							(function() {
+								var qs, js, q, s, d = document,
+									gi = d.getElementById,
+									ce = d.createElement,
+									gt = d.getElementsByTagName,
+									id = "typef_orm",
+									b = "https://embed.typeform.com/";
+								if (!gi.call(d, id)) {
+									js = ce.call(d, "script");
+									js.id = id;
+									js.src = b + "embed.js";
+									q = gt.call(d, "script")[0];
+									q.parentNode.insertBefore(js, q)
+								}
+							})()
+						</script>
+						<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=fkGEGZ&utm_source=typeform.com-13801649-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN"
+							  style="color: #999" target="_blank">Typeform</a> </div>
+					</form>
+				</div>
+				<div class="col-4 col-12-small">
+					<ul class="labeled-icons">
+						<li>
+							<h3 class="icon fa-home"><span class="label">Address</span></h3>
+							8313 La Riviera Dr.<br />
+							Sacramento, CA 95826<br />
+							United States
+						</li>
+						<li>
+							<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
+							805-844-7081
+						</li>
+						<li>
+							<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+							<a href="#">contact@jesusvega.me</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 
-				<!-- Four -->
-				<!--
+		<!-- Four -->
+		<!--
 					<section id="four">
 						<h2>Elements</h2>
 
@@ -435,30 +482,34 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 				-->
 
-			</div>
+	</div>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="https://twitter.com/jesusvegadev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/paragonchuy" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://instagram.com/jesusvegadev" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#three" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Vega Digital</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="inner">
+			<ul class="icons">
+				<li><a href="https://twitter.com/jesusvegadev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://github.com/paragonchuy" class="icon fa-github"><span class="label">Github</span></a></li>
+				<li><a href="https://instagram.com/jesusvegadev" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="#three" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<a href="http://vegadma.com">
+					<li>&copy; Vega Digital Media Agency</li>
+				</a>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
